# katex-wasm

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARK.md  CLAUDE.md  Cargo.toml  LICENSE_MIT  README.md
.github/workflows/: deploy-demo.yml
bench/: bench.js  micro_codec.js  micro_copy.js  micro_noop.js
cpuprofile-mcp/: Cargo.toml  README.md
cpuprofile-mcp/src/: main.rs
demo/: .gitignore  .travis.yml  README.md  index.html  index.js  package-lock.json  package.json  wasm-pack-webpack-plugin.js  webpack.config.js
demo/public/: formulas.txt
demo/scripts/: perf-playwright.mjs
diff_harness/: Cargo.toml
diff_harness/scripts/: js_parse_tree.js  js_render_html.js
diff_harness/src/: canonical.rs  debug_parser.rs  diff.rs  harness.rs  lib.rs  minimize.rs
diff_harness/tests/: ast_parity.rs
docs/: katex-rs-cli-coverage.md  profling-details.md
scripts/: katex-rs-cli-coverage.sh
src/: Lexer.rs  Namespace.rs  ParseError.rs  Parser.rs  Setting.rs  Style.rs  delimiter.rs  domTree.rs  katex.rs  lib.rs  parse_error.rs  sourceLocation.rs  spacingData.rs  stretchy.rs  svgGeometry.rs  token.rs  tree.rs  types.rs  unicodeAccents.rs  unicodeScripts.rs  unicodeSupOrSub.rs  unicodeSysmbols.rs  units.rs  utils.rs  wideCharacter.rs  wide_character.rs
src/Options/: consts.rs  mod.rs  types.rs
src/define/: mod.rs
src/define/environments/: array.rs  mod.rs
src/define/functions/: mod.rs  public.rs  sqrt.rs
src/define/functions/def_spec/: accent.rs  accentunder.rs  arrow.rs  assembleSupSub.rs  cd.rs  char.rs  color.rs  cr.rs  def.rs  delimsizing.rs  enclose.rs  environment.rs  font.rs  genfrac.rs  hbox.rs  horiz_brace.rs  href.rs  html.rs  htmlmathml.rs  includegraphics.rs  kern.rs  lap.rs  math.rs  mathchoice.rs  mclass.rs  mod.rs  op.rs  operatorname.rs  ordgroup.rs  overline.rs  phantom.rs  pmb.rs  raisebox.rs  relax.rs  rule.rs  sizing.rs  smash.rs  sqrt.rs  styling.rs  supsub.rs  (+8 more)
src/define/macros/: macro_expander.rs  macro_map.rs  mod.rs  public.rs
src/dom_tree/: anchor.rs  css_style.rs  document_fragment.rs  img.rs  line_node.rs  mod.rs  path_node.rs  span.rs  svg_node.rs  symbol_node.rs  utils.rs
src/mathML_tree/: math_node.rs  mod.rs  public.rs  space_node.rs  text_node.rs
src/metrics/: extra_character_map.rs  fontMetricsData.rs  format_json.py  mod.rs  public.rs  sigmas_and_xis.rs
src/parse/: mod.rs
src/parse_node/: mod.rs  types.rs
src/settings/: mod.rs  settings_types.rs
src/symbols/: mathS.rs  mod.rs  public.rs  textS.rs
struct_format/: Cargo.toml
struct_format/src/: lib.rs
tests/: diff_harness.mjs  hello.rs  katex_domtree.patch  parse.rs  render_parity.rs  web.rs
tests/fixtures/: auto_generted_formulas.txt  formulas.txt
