[package]
name = "katex-wasm"
version = "0.1.0"
# authors = ["dashuai009 <1525836294@qq.com>"]
edition = "2021"

[build]
target = "x86_64-pc-windows-gnu"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
struct_format = {path = "struct_format"}
 # serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2.108", features = ["serde-serialize"] }
js-sys = "0.3.85"
regex = "1.12.3"
lazy_static = "1.5.0"
unicode-normalization = "0.1.25"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

web-sys = {version = "0.3", features = [
  'Document',
  'Element',
  'DocumentFragment',
  'HtmlElement',
  'Node',
  'Window',
  'Text',
  'console'
]}

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[profile.dev]
opt-level = 0

# 性能分析专用 profile
[profile.profiling]
inherits = "release"
debug = true          # 保留调试符号，用于分析工具
strip = false         # 不剥离符号
opt-level = 3         # 最高优化级别，获得真实性能数据
lto = true            # 禁用 LTO 以加快编译（分析时可开启）

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = false
lto = true
codegen-units = 256

#[target.x86_64-unknown-linux-gnu]
## 更改链接器，增快编译速度
#linker = "lld"

[workspace]
members = [".", "struct_format", "diff_harness"]