[package]
name = "katex-wasm"
version = "0.1.0"
# authors = ["dashuai009 <1525836294@qq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "katex-rs-cli"
path = "src/bin/katex_rs_cli.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
struct_format = {path = "struct_format"}
 # serde = { version = "1.0.137", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = { version = "0.2.108", features = ["serde-serialize"] }
js-sys = "0.3.85"
regex = "1.12.3"
lazy_static = "1.5.0"
unicode-normalization = "0.1.25"
indexmap = "2.11.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

web-sys = {version = "0.3", features = [
  'Document',
  'Element',
  'DocumentFragment',
  'HtmlElement',
  'Node',
  'Window',
  'Text',
  'console'
]}

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false


#[target.x86_64-unknown-linux-gnu]
## 更改链接器，增快编译速度
#linker = "lld"

[workspace]
members = [".", "struct_format", "cpuprofile-mcp"]

