[package]
name = "struct_format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
syn = {version="1.0.96",features=["full","fold"]}
quote = "1.0.18"
proc-macro2 = "1.0.39"
lazy_static = "1.4.0"
regex = "1"
